Changes in @NEW@:
  o New Features:
    * Config files from RPM capasules are now handled by Conary instead of
      RPM, including diff/patch merging.

  o Bug Fixes:
    * gzip files that are corrupt in the first 4KB of compressed data
      no longer cause all policies that check for file type using
      conary's "magic" module to trace back. (CNY-3377)
    * conary.lib.util now has an fnmatchTranslate function that strips
      the end-of-string termination consistently in python 2.6.5 and
      in older versions. (CNY-3378)
    * dbstore's createIndex() method no longer fails if invoked multiple
      times without reloading the schema. (CNY-3380)
    * A bug related to Java files containing classes with no requirements
      is now fixed. (CNY-3379)
    * Unicode representations of flavors are now converted to ASCII
      strings before being parsed. (CNY-3381)

Changes in 2.1.11:
  o New Features:
    * The recreatedb script is now capable of populating the Conary
      database with packages in the RPM database that are found in
      the Conary repositories in the installLabelPath. (CNY-3373)

  o Internal Changes
    * Added ability to commit changesets without executing capsule
      implementations. This allows us to build a conarydb which reflects
      the current state of a system without reinstalling packages through
      the capsule handler.

  o Bug Fixes:
    * The Java package policies for computing provides and requires are
      now more efficient. (CNY-3372)

Changes in 2.1.10:
  o New Features:
    * The "conary migrate" command no longer requires interactive
      mode, and now defaults to yes rather than no. (CNY-3361)
    * Added --diff option to verify and showchangeset commands to display
      output as a git-formatted diff
    * Added --new-files option to verify to include files which were added
      to the system outside of conary package management. The
      verifyDirsNoNewFiles configuration option was added to pare down the