@@ -3085,19 +3085,61 @@ def calcSizeAndCheckHashes(group, troveCache, callback):
             # we can't look up a path in a trove, just pathIds.
             paths = []
             for path in conflictingPaths:
-                fileIds = set()
+                fileInfo = set()
                 for tup in conflictSet:
-                    fileIds |= set( x[2]
+                    fileInfo |= set( x
                                 for x in trovesWithFiles[tup].iterFileList()
                                         if x[1] == path)
 
-                if len(fileIds) > 1:
+                if len(set(x[2] for x in fileInfo)) > 1:
                     paths.append(path)
 
             if paths:
-                conflictsWithFiles.append((conflictSet, paths))
+                conflictsWithFiles.append((conflictSet, paths, fileInfo))
 
-        return conflictsWithFiles
+        finalConflicts = []
+        rpmCapsuleConflicts = []
+        rpmStreamsNeeded = []
+        for conflictSet, paths, fileInfo in conflictsWithFiles:
+            # The files have conflicting fileIds. If all of the
+            # troves involved are RPM capsules, we need to look
+            # at the actual streams (which we don't have yet)
+            capsules = [ trovesWithFiles[x].troveInfo.capsule.type()
+                            for x in conflictSet ]
+            if (len([ x for x in capsules
+                        if x == trove._TROVECAPSULE_TYPE_RPM]) !=
+                len(capsules)):
+                finalConflicts.append((conflictSet, paths))
+            else:
+                rpmStreamsNeeded.extend( (x[0], x[2], x[3]) for x in
+                                            fileInfo )
+                rpmCapsuleConflicts.append((conflictSet, paths, fileInfo))
+
+        rpmFileObjs = troveCache.repos.getFileVersions(rpmStreamsNeeded)
+        filesByFileId = dict( (x[1], y) for (x, y) in
+                                izip(rpmStreamsNeeded, rpmFileObjs) )
+
+        for conflictSet, paths, fileInfo in rpmCapsuleConflicts:
+            fileIdAndObj = set([ (x[2], filesByFileId[x[2]])
+                                 for x in fileInfo ])
+            # we now have a unique set of fileIds to look at; if one is
+            # a consistent "winner" in terms of priority, we don't have
+            # an actual conflict
+            for i, (fileId, fileObj) in enumerate(fileIdAndObj):
+                winner = True
+                for j, (otherFileId, otherFileObj) in enumerate(fileIdAndObj):
+                    if i == j: continue
+                    if files.rpmFileColorCmp(fileObj, otherFileObj) < 1:
+                        winner = False
+                        break
+
+                if winner:
+                    break
+
+            if not winner:
+                finalConflicts.append((conflictSet, paths))
+
+        return finalConflicts
 
     size = 0
     validSize = True
