@@ -76,6 +76,7 @@ BASENAMES       = 1117
 DIRNAMES        = 1118
 PAYLOADFORMAT     = 1124
 PAYLOADCOMPRESSOR = 1125
+FILECOLORS      = 1140
 
 SIG_BASE        = 256
 SIG_SHA1        = 269
